--- a/.github/workflows/test-pr.yaml
+++ b/.github/workflows/test-pr.yaml
@@ -3,25 +3,26 @@ on:
   pull_request:
 
 jobs:
-  detect-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      templates: ${{ steps.filter.outputs.changes }}
-    steps:
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            color: ./**/color/**
-            hello: ./**/hello/**
+  # detect-changes:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     templates: ${{ steps.filter.outputs.changes }}
+  #   steps:
+  #     - uses: dorny/paths-filter@v2
+  #       id: filter
+  #       with:
+  #         filters: |
+  #           color: ./**/color/**
+  #           hello: ./**/hello/**
 
   test:
-    needs: [detect-changes]
+    # needs: [detect-changes]
     runs-on: ubuntu-latest
     continue-on-error: true
     strategy:
       matrix:
-        templates: ${{ fromJSON(needs.detect-changes.outputs.templates) }}
+        templates:
+          - color
     steps:
       - uses: actions/checkout@v3
 
