--- a/src/color/.devcontainer/devcontainer.json
+++ b/src/color/.devcontainer/devcontainer.json
@@ -3,13 +3,12 @@
 	"image": "mcr.microsoft.com/devcontainers/base:${templateOption:imageVariant}",
 
 	// 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
-	// "features": {},
+	"features": {},
 
 	// 👇 Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
-	"postCreateCommand": "echo '${templateOption:favorite}' > /tmp/color.txt"
-
+	"postCreateCommand": "echo '${templateOption:favorite}' > /tmp/color.txt",
 	// 👇 Configure tool-specific properties.
 	// "customizations": {},
 
