--- a/src/color/.devcontainer/devcontainer.json
+++ b/src/color/.devcontainer/devcontainer.json
@@ -3,7 +3,9 @@
 	"image": "mcr.microsoft.com/devcontainers/base:${templateOption:imageVariant}",
 
 	// 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
-	"features": {},
+	"features": {
+		"ghcr.io/devcontainers/features/github-cli": {}
+	},
 
 	// 👇 Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
