--- a/src/color/devcontainer-template.json
+++ b/src/color/devcontainer-template.json
@@ -26,6 +26,9 @@
             "default": "red"
         }
     },
+    "optionalPaths": [
+        "foo.md"
+    ],
     "platforms": [
         "Any"
     ]
